--- a/index.html
+++ b/index.html
@@ -5,20 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>Discord</title>
 </head>
 <body>
     <!-- HEADER -->
     <header>
-        <!-- div container -->
         <div class="container_header">
-            <!-- row -->
-            <div class="row_header">
-                <!-- tre colonne con logo, link e login -->
-                <div class="col_25 logo">logo</div>
-                <div class="col_50">link link link link link</div>
-                <div class="col_25 login">login</div>
+            <!-- row top header -->
+            <div class="row_top_header">
+                <div class="col_logo_header">
+                    <img class="logo" src="./img/logo.svg" alt="">
+                </div>
+                <div class="col_nav_header">
+                    <span class="nav">Scarica</span>
+                    <span class="nav">Perch&eacute; discord</span>
+                    <span class="nav">Nitro</span>
+                    <span class="nav">Sicurezza</span>
+                    <span class="nav">Assistenza</span>
+                </div>
+                <div class="col_button_header">
+                    <button class="login">Accedi</button>
+                </div>
+            </div>
+            <!-- row bottom header -->
+            <div class="row_bottom_header">
+                <div class="col_titolo_header">
+                    <h1 class="main_title">Il tuo posto per parlare</h1>
+                </div>
+                <div class="col_paragrafo_header">
+                    <p class="paragrafo_header">Che tu faccia parte di un club scolastico, gruppo di gamer, comunit&aacute; artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende pi&uacute; facile chiacchierare ogni giorno e ritrovarsi pi&uacute; spesso.</p>
+                </div>
+                <div class="col_button_bottom_header">
+                    <button class="button_bottom_header_left">&DownArrow; Scarica per Mac</button>
+                    <button class="button_bottom_header_right">Apri Discord nel tuo browser</button>
+                </div>
             </div>
         </div>
     </header>
