esercizio in corso

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                     <img class="logo" src="./img/logo.svg" alt="">
                 </div>
                 <div class="col_nav_header">
-                    <span class="nav">Scarica</span>
-                    <span class="nav">Perch&eacute; discord</span>
-                    <span class="nav">Nitro</span>
-                    <span class="nav">Sicurezza</span>
-                    <span class="nav">Assistenza</span>
+                    <a class="nav" href="#">Scarica</a>
+                    <a class="nav" href="#">Perch&eacute; discord</a>
+                    <a class="nav" href="#">Nitro</a>
+                    <a class="nav" href="#">Sicurezza</a>
+                    <a class="nav" href="#">Assistenza</a>
                 </div>
                 <div class="col_button_header">
-                    <button class="login">Accedi</button>
+                    <a href="#"><button class="login">Accedi</button></a>
                 </div>
             </div>
             <!-- row bottom header -->
@@ -37,8 +37,8 @@
                     <p class="paragrafo_header">Che tu faccia parte di un club scolastico, gruppo di gamer, comunit&aacute; artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende pi&uacute; facile chiacchierare ogni giorno e ritrovarsi pi&uacute; spesso.</p>
                 </div>
                 <div class="col_button_bottom_header">
-                    <button class="button_bottom_header_left">&DownArrow; Scarica per Mac</button>
-                    <button class="button_bottom_header_right">Apri Discord nel tuo browser</button>
+                    <a href="#"><button class="button_bottom_header_left">&DownArrow; Scarica per Mac</button></a>
+                    <a href="#"><button class="button_bottom_header_right">Apri Discord nel tuo browser</button></a>
                 </div>
             </div>
         </div>
@@ -49,7 +49,13 @@
         <section class="section_1">
             <div class="container_section_1">
                 <div class="row_section_1">
-                    <div class="col_section_1"></div>
+                    <div class="col_section_1_left">
+                        <img src="./img/item1.svg" alt="">
+                    </div>
+                    <div class="col_section_1_right">
+                        <h1 class="title_section_main">Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                        <p class="paragraph_section_main">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -57,8 +63,13 @@
         <section class="section_2">
             <div class="container_section_2">
                 <div class="row_section_2">
-                    <div class="col_section_2_left"></div>
-                    <div class="col_section_2_right"></div>
+                    <div class="col_section_2_left">
+                        <h1 class="title_section_main">Dove trovarsi &eacute; facile</h1>
+                        <p class="paragraph_section_main">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei l&igrave; istantaneamente senza dover chiamare.</p>
+                    </div>
+                    <div class="col_section_2_right">
+                        <img src="./img/item2.svg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
@@ -66,8 +77,13 @@
         <section class="section_3">
             <div class="container_section_3">
                 <div class="row_section_3">
-                    <div class="col_section_3_left"></div>
-                    <div class="col_section_3_right"></div>
+                    <div class="col_section_3_left">
+                        <img src="./img/item3.svg" alt="">
+                    </div>
+                    <div class="col_section_3_right">
+                        <h1 class="title_section_main">Da pochi a un fandom</h1>
+                        <p class="paragraph_section_main">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -75,16 +91,17 @@
         <section class="section_4">
             <div class="container_section_4">
                 <div class="row_section_4">
-                    <div class="col_section_4_left"></div>
-                    <div class="col_section_4_right"></div>
-                </div>
-            </div>
-        </section>
-        <!-- section 5 -->
-        <section class="section_5">
-            <div class="container_section_5">
-                <div class="row_section_5">
-                    <div class="col_section_5"></div>
+                    <div class="col_section_4_top">
+                        <h1 class="title_section_4_main">Tecnologia affidabile per tenersi in contatto</h1>
+                        <p class="paragraph_section_4_main">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                        <img class="img_section_4_main" src="./img/item4-big.svg" alt="">
+                    </div>
+                    <div class="col_section_4_bottom_1">
+                        <h2>Pronto a iniziare la tua avventura?</h2>
+                    </div>
+                    <div class="col_section_4_bottom_2">
+                        <a href="#"><button class="button_bottom_footer">&DownArrow; Scarica per Mac</button></a>
+                    </div>
                 </div>
             </div>
         </section>
