Esercizio finito: conclusi main e footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Discord</title>
 </head>
 <body>
@@ -100,7 +101,7 @@
                         <h2>Pronto a iniziare la tua avventura?</h2>
                     </div>
                     <div class="col_section_4_bottom_2">
-                        <a href="#"><button class="button_bottom_footer">&DownArrow; Scarica per Mac</button></a>
+                        <a href="#"><button class="button_bottom_main">&DownArrow; Scarica per Mac</button></a>
                     </div>
                 </div>
             </div>
@@ -112,11 +113,63 @@
         <section class="section_footer_1">
             <div class="container_section_footer_1">
                 <div class="row_section_footer_1">
-                    <div class="col_section_footer_1"></div>
-                    <div class="col_section_footer_2"></div>
-                    <div class="col_section_footer_3"></div>
-                    <div class="col_section_footer_4"></div>
-                    <div class="col_section_footer_5"></div>
+                    <div class="col_section_footer_1">
+                        <h3 class="footer_title_color">Il tuo posto per parlare</h3>
+                        <img class="flag_ita" src="./img/ita.png" alt="">
+                        <span>italiano <a href="#">&#9660;</a></span>
+                        <div class="logos">
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="col_section_footer_2">
+                        <ul>
+                            <li class="footer_title_color" class="footer_title_color">Prodotto</li>
+                            <li><a href="#">Scarica</a></li>
+                            <li><a href="#">Perch&eacute; Discord</a></li>
+                            <li><a href="#">Nitro</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Assistenza</a></li>
+                        </ul>
+                    </div>
+                    <div class="col_section_footer_3">
+                        <ul>
+                            <li class="footer_title_color">Compagnia</li>
+                            <li><a href="#">Chi siamo</a></li>
+                            <li><a href="#">Lavora con noi</a></li>
+                            <li><a href="#">Marchio</a></li>
+                            <li><a href="#">Redazione</a></li>
+                            <li><a href="#">Negozio</a></li>
+                        </ul>
+                    </div>
+                    <div class="col_section_footer_4">
+                        <ul>
+                            <li class="footer_title_color">Risorse</li>
+                            <li><a href="#">Scarica</a></li>
+                            <li><a href="#">Perch&eacute; Discord</a></li>
+                            <li><a href="#">Nitro</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Assistenza</a></li>
+                            <li><a href="#">Scarica</a></li>
+                            <li><a href="#">Perch&eacute; Discord</a></li>
+                            <li><a href="#">Nitro</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Assistenza</a></li>
+                            <li><a href="#">Assistenza</a></li>
+                        </ul>
+                    </div>
+                    <div class="col_section_footer_5">
+                        <ul>
+                            <li class="footer_title_color">Norme</li>
+                            <li><a href="#">Scarica</a></li>
+                            <li><a href="#">Perch&eacute; Discord</a></li>
+                            <li><a href="#">Nitro</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Assistenza</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
@@ -124,8 +177,12 @@
         <section class="section_footer_2">
             <div class="container_section_footer_2">
                 <div class="row_section_footer_2">
-                    <div class="col_section_bottom_footer_1">Logo</div>
-                    <div class="col_section_bottom_footer_2">Bottone</div>
+                    <div class="col_section_bottom_footer_1">
+                        <img src="./img/logo.svg" alt="">
+                    </div>
+                    <div class="col_section_bottom_footer_2">
+                        <a href="#"><button class="button_section_2_footer">Registrati</button></a>
+                    </div>
                 </div>
             </div>
         </section>
